--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
       </div>
       <audio src="" id="audio"></audio>
       <div class="image-container">
-          <img src="" alt="">
+          <img src="" alt="" id="cover">
       </div>
-     
+      <div class="navigation">
+        <button id="prev" class="action-btn">
+          <i class="fas fa-backward">
+        </button>
+
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
