--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <h1>Music Player</h1>
-    <div class="music-container" id="music-container">
+    <div class="music-container play" id="music-container">
       <div class="music-info">
         <h4 id="title"></h4>
         <div class="progress-container" id="progress-container">
@@ -26,7 +26,7 @@
 
       <audio src="" id="audio"></audio>
 
-      <div class="image-container">
+      <div class="img-container">
         <img src="/images/hybrid-piano.jpg" alt="music-cover" id="cover" />
       </div>
 
