--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <audio src="" id="audio"></audio>
 
       <div class="img-container">
-        <img src="/images/hybrid-piano.jpg" alt="music-cover" id="cover" />
+        <img src="" alt="music-cover" id="cover" />
       </div>
 
       <div class="navigation">
